// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteUserContentPreviewScreen 1`] = `
<InjectIntl(MessagesIntlProvider)>
  <styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Tell us how do you want the user to be remembered"
        description="Heading for the screen that explains admin would prefer user to be remembered"
        id="focused-task-close-account.delete-account.content-preview.heading.admin"
        values={Object {}}
      />
    </styled.div>
    <FormattedMessage
      defaultMessage="After the user’s account is deleted, they’ll appear as “Former user” to other users. Please take a moment to answer our survey question."
      description="First paragraph for the survey for admins"
      id="focused-task-close-account.delete-account.content-preview.paragraph.survey.admin"
      tagName="p"
      values={Object {}}
    />
    <FormattedMessage
      defaultMessage="If we gave you a choice, how would you like the deleted user to appear to other users?"
      description="Second paragraph for the survey for admins"
      id="focused-task-close-account.delete-account.content-preview.line.survey.admin"
      tagName="p"
      values={Object {}}
    />
    <styled.div
      className="nameSectionCard"
      isSelected={false}
      onClick={[Function]}
    >
      <styled.div>
        <WithAnalyticsContext(WithAnalyticsEvents(mapProps(withPseudoState(Avatar))))
          size="large"
          src=""
        />
      </styled.div>
      <styled.div>
        Catherine Hirons
      </styled.div>
    </styled.div>
    <styled.div
      className="formerUserSectionCard"
      isSelected={false}
      onClick={[Function]}
    >
      <styled.div>
        <WithAnalyticsContext(WithAnalyticsEvents(mapProps(withPseudoState(Avatar))))
          size="large"
          src=""
        />
      </styled.div>
      <styled.div>
        Former User
      </styled.div>
    </styled.div>
    <FormattedHTMLMessage
      defaultMessage="Note: Answering this survey will help us make a better experience for all users. The user will still appear as “Former user” after you delete their account."
      description="Note to admins that the users would still be saved as Former User"
      id="focused-task-close-account.delete-account.content-preview.footnote.admin"
      tagName="p"
      values={Object {}}
    />
  </styled.div>
</InjectIntl(MessagesIntlProvider)>
`;

exports[`handleClickSelection changes the isSelected parameter of the element 1`] = `
<InjectIntl(MessagesIntlProvider)>
  <styled.div>
    <styled.div>
      <FormattedMessage
        defaultMessage="Tell us how do you want the user to be remembered"
        description="Heading for the screen that explains admin would prefer user to be remembered"
        id="focused-task-close-account.delete-account.content-preview.heading.admin"
        values={Object {}}
      />
    </styled.div>
    <FormattedMessage
      defaultMessage="After the user’s account is deleted, they’ll appear as “Former user” to other users. Please take a moment to answer our survey question."
      description="First paragraph for the survey for admins"
      id="focused-task-close-account.delete-account.content-preview.paragraph.survey.admin"
      tagName="p"
      values={Object {}}
    />
    <FormattedMessage
      defaultMessage="If we gave you a choice, how would you like the deleted user to appear to other users?"
      description="Second paragraph for the survey for admins"
      id="focused-task-close-account.delete-account.content-preview.line.survey.admin"
      tagName="p"
      values={Object {}}
    />
    <styled.div
      className="nameSectionCard"
      isSelected={true}
      onClick={[Function]}
    >
      <styled.div>
        <WithAnalyticsContext(WithAnalyticsEvents(mapProps(withPseudoState(Avatar))))
          size="large"
          src=""
        />
      </styled.div>
      <styled.div>
        Catherine Hirons
      </styled.div>
    </styled.div>
    <styled.div
      className="formerUserSectionCard"
      isSelected={false}
      onClick={[Function]}
    >
      <styled.div>
        <WithAnalyticsContext(WithAnalyticsEvents(mapProps(withPseudoState(Avatar))))
          size="large"
          src=""
        />
      </styled.div>
      <styled.div>
        Former User
      </styled.div>
    </styled.div>
    <FormattedHTMLMessage
      defaultMessage="Note: Answering this survey will help us make a better experience for all users. The user will still appear as “Former user” after you delete their account."
      description="Note to admins that the users would still be saved as Former User"
      id="focused-task-close-account.delete-account.content-preview.footnote.admin"
      tagName="p"
      values={Object {}}
    />
  </styled.div>
</InjectIntl(MessagesIntlProvider)>
`;
